# daily-paper-generator

./: .gitignore  CLAUDE.md  README.md  package.json  pnpm-lock.yaml
.claude/: settings.local.json
.github/workflows/: release.yml
src/: App.vue  main.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  fetch.rs  gitea.rs  gitlab.rs  gogs.rs  jira.rs  lib.rs  llm.rs  main.rs  report.rs  utils.rs
src/composables/: useTheme.ts
src/db/: index.ts
src/pages/: Home.vue  Logs.vue  Records.vue  Settings.vue  WeeklyReport.vue
src/router/: index.ts
src/utils/: date.ts
