[package]
name = "daily-paper-tool"
version = "0.3.0"
description = "基于jira与gitlab的日报/周报生成工具"
authors = ["xyunjie"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "daily_paper_tool_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = "0.4"
dirs-next = "2"
docx-rs = "0.4"
log = "0.4"
once_cell = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
rfd = "0.15"
rust_xlsxwriter = "0.82"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simplelog = "0.12"
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
urlencoding = "2"
